NJH-359 docs
