# src/modules/users/presentation/dtos.ts
@@ -1,12 +1,11 @@
 import { CreateUserParam, CreateUserRet, GetMeRet, UpdateUserParam, UpdateUserRet } from '../application/dtos';
-import { IUser } from '../domain/interface/user.interface';
 
-// Presentation Layer Request DTOs
-export type CreateUserReqBody = IUser.Dto.Create;
+// Presentation Layer Request DTOs ----------------------------------------------
+export type CreateUserReqBody = CreateUserParam['userCreateDto'];
 
-export type UpdateUserReqBody = Omit<IUser.Dto.Update, 'id'>;
+export type UpdateUserReqBody = Omit<UpdateUserParam['userUpdateDto'], 'id'>;
 
-// Presentation Layer Response DTOs
+// Presentation Layer Response DTOs ----------------------------------------------
 export interface CreateUserRes extends CreateUserRet {}
 
 export interface UpdateUserRes extends UpdateUserRet {}
